--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -6,13 +6,21 @@ jobs:
   php-cs-fixer:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.1
 
       - name: Install Dependencies
+        working-directory: ./src
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --prefer-dist --working-dir=tools/php-cs-fixer
 
       - name: PHP-CS-Fixer Version
+        working-directory: ./src
         run: ./tools/php-cs-fixer/vendor/bin/php-cs-fixer fix --version
 
       - name: PHP-CS-Fixer Dry Run
+        working-directory: ./src
         run: ./tools/php-cs-fixer/vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.dist.php --verbose --dry-run
