--- a/.github/workflows/larastan.yml
+++ b/.github/workflows/larastan.yml
@@ -16,8 +16,10 @@ jobs:
 
       - name: Install Dependencies
         working-directory: ./src
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --prefer-dist
+        run: |
+          composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --prefer-dist
+          composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --prefer-dist --working-dir=tools/larastan
 
       - name: PHPStan Analyse
         working-directory: ./src
-        run: ./vendor/bin/phpstan analyse
+        run: ./tools/larastan/vendor/bin/phpstan analyse
