--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -1,6 +1,7 @@
 name: PHP-CS-Fixer
 
-on: [pull_request]
+on:
+  pull_request:
 
 jobs:
   php-cs-fixer:
@@ -15,7 +16,7 @@ jobs:
 
       - name: Install Dependencies
         working-directory: ./src
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --prefer-dist --working-dir=tools/php-cs-fixer
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist --working-dir=tools/php-cs-fixer
 
       - name: PHP-CS-Fixer Version
         working-directory: ./src
