--- a/.github/workflows/larastan.yml
+++ b/.github/workflows/larastan.yml
@@ -1,7 +1,7 @@
 name: Larastan
 
 on:
-  - pull_request
+  pull_request:
 
 jobs:
   larastan:
@@ -17,8 +17,8 @@ jobs:
       - name: Install Dependencies
         working-directory: ./src
         run: |
-          composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --prefer-dist
-          composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --prefer-dist --working-dir=tools/larastan
+          composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+          composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist --working-dir=tools/larastan
 
       - name: PHPStan Analyse
         working-directory: ./src
