--- a/.github/workflows/laravel-testing.yml
+++ b/.github/workflows/laravel-testing.yml
@@ -2,11 +2,9 @@ name: Laravel Testing
 
 on:
   pull_request:
-  schedule:
-    - cron:  '0 0 * * *'
 
 jobs:
-  docker-build:
+  laravel-testing:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,40 +13,50 @@ jobs:
       - name: Docker Version
         run: docker version
 
-      - name: Build Docker Images
-        run: docker compose build
-
       - name: Create & Start Docker Containers
         run: docker compose up -d
 
       - name: OS Version
         run: |
-          docker compose exec -T app cat /etc/os-release
-          docker compose exec -T app cat /etc/debian_version
+          docker compose exec app cat /etc/os-release
+          docker compose exec app cat /etc/debian_version
 
       - name: PHP Version
-        run: docker compose exec -T app php --version
+        run: docker compose exec app php --version
 
       - name: Composer Version
-        run: docker compose exec -T app composer --version
+        run: docker compose exec app composer --version
 
-      - name: Composer Install
-        run: docker compose exec -T app composer install
+      - name: Cache Dependencies
+        uses: actions/cache@v3
+        id: cache
+        with:
+          path: ./src/vendor
+          key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+
+      - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: docker compose exec app composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
       - name: Laravel Version
-        run: docker compose exec -T app php artisan --version
+        run: docker compose exec app php artisan --version
 
       - name: Laravel Settings
-        run: docker compose exec -T app cp .env.example .env
+        run: docker compose exec app cp .env.example .env
+
+      - name: Wait for the MySQL container to start
+        run: sleep 5s
+        shell: bash
 
       - name: Laravel Migrate Testing
-        run: docker compose exec -T app php artisan migrate
+        run: docker compose exec app php artisan migrate
 
       - name: Laravel Rollback Testing
-        run: docker compose exec -T app php artisan migrate:refresh
+        run: docker compose exec app php artisan migrate:refresh
 
       - name: Laravel Seeding Testing
-        run: docker compose exec -T app php artisan db:seed
+        run: docker compose exec app php artisan db:seed
 
       - name: Laravel PHPUnit Testing
-        run: docker compose exec -T app php artisan test
+        run: docker compose exec app php artisan test
